--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>altair</name>
-	<description>Demo project for Spring Boot</description>
+	<description>ALTAIR - Autonomous Logical Telescope Aiming and Image Recorder</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -95,14 +95,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- JACOB - Java COM Bridge, must install version dependant .DLL from https://github.com/freemansoft/jacob-project/releases -->
 		<dependency>
 			<groupId>com.hynnet</groupId>
 			<artifactId>jacob</artifactId>
 			<version>1.18</version>
 		</dependency>
-
-
-		
 	</dependencies>
 
 	<build>
