--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,12 @@
 spring:
+    application:
+        name: Altair
     jpa:
-        hibernate.ddl-auto: update
+        hibernate:
+            ddl-auto: create
     datasource:
         driverClassName: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/test
+        url: jdbc:mysql://localhost:3306/testdb
         username: test
         password: test
 
