--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,5 +9,5 @@ spring:
         url: jdbc:mysql://localhost:3306/testdb
         username: test
         password: test
-
+logging.level.org.springframework: DEBUG
 
