--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,5 +9,7 @@ spring:
         url: jdbc:mysql://localhost:3306/testdb
         username: test
         password: test
+    thymeleaf:
+        cache: false
 logging.level.org.springframework: DEBUG
 
