--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.aajpm</groupId>
 	<artifactId>altair</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>altair</name>
+	<name>ALTAIR</name>
 	<description>ALTAIR - Autonomous Logical Telescope Aiming and Image Recorder</description>
 	<properties>
 		<java.version>17</java.version>
@@ -142,8 +142,15 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<id>build-info</id>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
