ref(camera): fixed ordering error on imagebytes

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ build/
 
 ### Custom favicon ###
 src/main/resources/static/favicon.ico
+testReadImageArray.fits
+testReadImageArray.fits.gz
+testReadImageBytes.fits
+testReadImageBytes.fits.gz
