--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,14 +16,14 @@ spring:
 logging:
     level:
         org:
-            springframework: DEBUG
+            springframework: INFO
 altair:
     security:
         max-attempts: 3                         # Maximum number of failed login attempts before the account is locked
         lockout-time: 300                       # Time in seconds that the account is locked after too many failed login attempts
         default-password: hikoboshi             # Default password for the admin, please change this after deployment
     observatory:
-        status-update-interval: 2000            # Interval in milliseconds between status updates for the observatory
+        status-update-interval: 2000            # Interval in milliseconds between status updates for the observatory. If set too fast, it might hang the server.
         camera:
             max-cooldown-rate: 2.5              # Maximum cooldown rate for the camera, in °C/min
             min-cooldown-rate: 0.5              # Minimum cooldown rate for the camera, in °C/min. If it cools down too slowly, the cooler will stop cooling it further.
