ref(health1): Dome upgraded to new system

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,8 @@ altair:
         lockout-time: 300                       # Time in seconds that the account is locked after too many failed login attempts
         default-password: hikoboshi             # Default password for the admin, please change this after deployment
     observatory:
-        status-update-interval: 2000            # Interval in milliseconds between status updates for the observatory. If set too fast, it might hang the server.
+        status-update-interval: 2000            # Interval in ms between status updates for the observatory. If set too fast, it might hang the server/devices.
+        synchronous-timeout: 60000              # Timeout in ms for synchronous operations. If set too high, failed operations might never finish, and if set too low, some successful operations might get interrupted. Set to 0 to disable timeouts (not recommended).
         camera:
             max-cooldown-rate: 2.5              # Maximum cooldown rate for the camera, in °C/min
             min-cooldown-rate: 0.5              # Minimum cooldown rate for the camera, in °C/min. If it cools down too slowly, the cooler will stop cooling it further.
