--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
         cache: false
     mvc:
         log-request-details: true
+        async:
+            request-timeout: 60000
 logging:
     level:
         org:
