ref(health1): Camera upgraded to new system

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,10 +28,10 @@ altair:
         status-update-interval: 2000            # Interval in ms between status updates for the observatory. If set too fast, it might hang the server/devices.
         synchronous-timeout: 60000              # Timeout in ms for synchronous operations. If set too high, failed operations might never finish, and if set too low, some successful operations might get interrupted. Set to 0 to disable timeouts (not recommended).
         camera:
-            max-cooldown-rate: 2.5              # Maximum cooldown rate for the camera, in °C/min
-            min-cooldown-rate: 0.5              # Minimum cooldown rate for the camera, in °C/min. If it cools down too slowly, the cooler will stop cooling it further.
-            max-warmup-rate: 1.5                # Maximum warmup rate for the camera, in °C/min
-            cooler-saturation-threshold: 0.85   # If the cooler reaches this power level, it is considered saturated
+            max-cooldown-rate: 2.5              # Maximum cooldown rate for the camera, in °C/min, if hardware does not support auto ramping.
+            min-cooldown-rate: 0.5              # Minimum cooldown rate for the camera, in °C/min, if hardware does not support auto ramping. If it cools down too slowly, the cooler will stop cooling it further.
+            max-warmup-rate: 1.5                # Maximum warmup rate for the camera, in °C/min, if hardware does not support auto ramping.
+            cooler-saturation-threshold: 95.0   # If the cooler reaches this power level, it is considered saturated
             image-buffer-size: 268435456        # Size of the image processing buffer, in bytes. Use '-1' to disable the limiter and use the maximum available memory.
 
 
