--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,6 +27,8 @@ altair:
     observatory:
         status-update-interval: 2000            # Interval in ms between status updates for the observatory. If set too fast, it might hang the server/devices.
         synchronous-timeout: 60000              # Timeout in ms for synchronous operations. If set too high, failed operations might never finish, and if set too low, some successful operations might get interrupted. Set to 0 to disable timeouts (not recommended).
+        use-native-slaving: false               # If true, Altair will use the native slaving capabilities of the mount, if available. Else, Altair will use its own slaving mechanism.
+        disable-safety-checks: true             # If true, Altair will not check if the conditions are safe to operate before slewing. This is not recommended, as it might cause damage to the mount. Use only if you really know what you are doing.
         camera:
             max-cooldown-rate: 2.5              # Maximum cooldown rate for the camera, in °C/min, if hardware does not support auto ramping.
             min-cooldown-rate: 0.5              # Minimum cooldown rate for the camera, in °C/min, if hardware does not support auto ramping. If it cools down too slowly, the cooler will stop cooling it further.
