--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ altair:
         default-password: hikoboshi             # Default password for the admin, please change this after deployment
     observatory:
         status-update-interval: 5000            # Interval in ms between status updates for the observatory. If set too fast, it might hang the server/devices.
-        synchronous-timeout: 60000             # Timeout in ms for synchronous operations. If set too high, failed operations might never finish, and if set too low, some successful operations might get interrupted. Set to 0 to disable timeouts (not recommended).
+        synchronous-timeout: 120000             # Timeout in ms for synchronous operations (mainly slews). If set too high, failed operations might never finish, and if set too low, some successful operations might get interrupted. Set to 0 to disable timeouts (not recommended).
         use-native-slaving: false               # If true, Altair will use the native slaving capabilities of the mount, if available. Else, Altair will use its own slaving mechanism.
         disable-safety-checks: true             # If true, Altair will not check if the conditions are safe to operate before slewing. This is not recommended, as it might cause damage to the mount. Use only if you really know what you are doing.
         camera:
@@ -42,6 +42,9 @@ altair:
             target-cooling: -10.0               # Target temperature for the camera when in auto mode, in °C
             cooler-saturation-threshold: 95.0   # If the cooler reaches this power level, it is considered saturated
             image-buffer-size: 268435456        # Size of the image processing buffer, in bytes. Use '-1' to disable the limiter and use the maximum available memory.
+        focuser:
+            backlash-steps: 0                   # Amount of backlash in the focuser, in steps. Set to 0 to disable backlash compensation.
+            position-tolerance: 5               # Tolerance for the focuser position, in steps. If the focuser is within this tolerance, it is considered to be at the target position.
         filter-wheel:
             filter-names:                       # Names of the filters in the filter wheel, in the order they are installed. If empty, Altair will use the service provided ones.
                 - Luminance
